<resources>
    <string name="app_name">CapstoneProject</string>
    <string name="login">Login\n</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="ex_email">youremail@gmail.com</string>
    <string name="dont_have_account">Don\'n have an account?</string>
    <string name="create">Create Now</string>
    <string name="register">Register</string>
    <string name="name">Nama</string>
    <string name="name_example">Diaz Alfadilu</string>
    <string name="username">Username</string>
    <string name="vetion">VeTion</string>
    <string name="top_menu">Top 3 Menu</string>
    <string name="news">News</string>
    <string name="result">Text Berita</string>
    <string name="menu_1">Home</string>
    <string name="title_activity_button">ButtonActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="menu_2">Tips</string>
    <string name="menu_3">Camera</string>
    <string name="menu_4">Nearby Shop</string>
    <string name="menu_5">Profile</string>
    <string name="nama_aplikasi">VeTion</string>
    <string name="title_signup_page">Silahkan Isi Data Diri Anda Disini</string>
    <string name="message_main_page">Assalamualaikum</string>
    <string name="logout">Keluar</string>
    <string name="success">Berhasil</string>
    <string name="success_create_acc">Akun Anda Berhasil Dibuat</string>
    <string name="continue_login">Masuk</string>
    <string name="title_detail">Detail Cerita</string>
    <string name="continue_main">Lanjut</string>
    <string name="success_login">Selamat Anda sudah berhasil login, silahkan mulai membagikan cerita anda disini</string>
    <string name="email_error">Silahkan masukkan sesuai dengan format email</string>
    <string name="password_error">Password harus terdiri dari 8 karakter</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="posting">Posting</string>
    <string name="Description">Deskripsikan Cerita Anda</string>
    <string name="title_posting">Posting Cerita</string>
    <string name="description_empty">Masukkan kata-kata kamu disini dulu yukk</string>
    <string name="image_empty">Tambahkan Foto dulu yukk</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="maps_title">Maps Activity</string>
    <string name="rto">Request Time Out</string>
    <string name="ulang">Coba Lagi</string>
    <string name="enable_gps">Lokasi pada perangkat anda belum aktif</string>
    <string name="enable_gps_message">Tolong nyalakan lokasi pada perangkat terlebih dahulu</string>
    <string name="lanjut">Selanjutnya</string>
    <string name="tidaklanjut">Batalkan</string>
    <string name="error_no_location">Tidak ada lokasi</string>
    <string name="registration_success">proses registrasi telah berhasil</string>
    <string name="registration_failed">mohon maaf, proses registrasi anda gagal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searchBar_hint">Search</string>
    <string name="title_tips">Vegetable Tips</string>
    <string name="title_nearby">Nearby Shop</string>
    <string name="title_logout">Logout</string>
    <string name="sample_news_text">"    Saat memasak, membersihkan sayur adalah langkah penting untuk memastikan kebersihan dan keamanan makanan. Berikut adalah cara yang benar untuk membersihkan sayur:\n\n    1. Sayur Berdaun: Cuci sayuran berdaun seperti bayam, kangkung, atau selada secara hati-hati. Pisahkan daun dari batangnya dan cuci dengan air yang mengalir untuk menghilangkan kotoran dan pestisida yang mungkin masih menempel.\n\n    2. Brokoli dan Kol: Potong brokoli atau kol menjadi bagian-bagian kecil dan rendam dalam air yang mengandung sedikit garam. Biarkan selama beberapa menit untuk membantu menghilangkan sisa pestisida dan kotoran.\n\n    3. Paprika dan Terong: Cuci paprika dan terong dengan menyikatnya menggunakan sikat sayuran atau dengan menggunakan tangan. Bilas dengan air yang mengalir.\n\n    4. Kentang: Gosok kulit kentang dengan sikat sayuran untuk membersihkan kotoran dan tanah yang menempel pada kulitnya. Cuci dengan air bersih.\n\n    5. Cuci dengan Air yang Mengalir: Pastikan untuk mencuci sayuran di bawah air yang mengalir agar kotoran dan pestisida benar-benar terbilas.\n\n    6. Sayur Organik: Jika memungkinkan, pilih sayuran organik untuk mengurangi paparan pestisida.\n\n    7. Segera Keringkan: Setelah mencuci, segera keringkan sayur menggunakan alat pengering salad atau dengan menepuk-nepuknya dengan kertas tisu untuk mengurangi kelembaban yang dapat mempercepat pembusukan.\n\n    Dengan membersihkan sayur dengan baik, Anda dapat menikmati makanan yang lebih segar dan lebih aman bagi kesehatan Anda dan keluarga.\n"</string>
</resources>