<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
        <item
            android:id="@+id/menu1"
            android:title="@string/menu_2"
            app:showAsAction="never" />
        <item
            android:id="@+id/menu2"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_1"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/menu3"
            android:icon="@drawable/ic_book"
            android:title="@string/menu_3"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/menu4"
            android:icon="@drawable/ic_camera"
            android:title="@string/menu_4"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/menu5"
            android:icon="@drawable/ic_shop"
            android:title="@string/menu_5"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/menu6"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_6"
            app:showAsAction="ifRoom" />
    </group>
</menu>